# endgame_shakmaty_cli

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
