[package]
name = "endgame_shakmaty_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
shakmaty = "0.30.0"
shakmaty-syzygy = "0.28.0"

# For retrieving Tablebase moves like what's done via "curl":
reqwest = {version = "0.13.2", features = ["json", "blocking"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
